// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default - Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': 'src.__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`default - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`default - import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`default - leading comment 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  // The main Hello of our app.
  hello: 'hello',

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  // The main Hello of our app.
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world'
  }
});
"
`;

exports[`default - leading comment with description 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({

  // This comment should not be used
  world: {
    defaultMessage: 'hello world',
    description: 'The hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({

  // This comment should not be used
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'hello world',
    description: 'The hello world'
  }
});
"
`;

exports[`default - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`default - not transform if defineMessages is not imported 1`] = `
"
export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

export default defineMessages({
  hello: 'hello',
  world: 'hello world'
});
"
`;

exports[`default - not transform when defineMessages argumens is not object 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages(1)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages(1);
"
`;

exports[`default - not transfrom when the variable can not be found 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages(messages)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages(messages);
"
`;

exports[`default - string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`default - when using the variable 1`] = `
"
import { defineMessages } from 'react-intl'

const messages = {hello: 'hello'}

export default defineMessages(messages)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

const messages = { hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  } };

export default defineMessages(messages);
"
`;

exports[`default - with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`default - with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`extractComments = true - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`extractComments = true - leading comment 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  // The main Hello of our app.
  hello: 'hello',

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  // The main Hello of our app.
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello',
    'description': 'The main Hello of our app.'
  },

  // Another Hello,
  // multiline this time
  world: {
    id: 'hello.world',
    defaultMessage: 'hello world',
    'description': 'Another Hello,\\\\nmultiline this time'
  }
});
"
`;

exports[`extractComments = true - leading comment with description 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({

  // This comment should not be used
  world: {
    defaultMessage: 'hello world',
    description: 'The hello world',
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({

  // This comment should not be used
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'hello world',
    description: 'The hello world'
  }
});
"
`;

exports[`filebase = true - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = all - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = all - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = true - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = true - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = false - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = false - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = all - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = all - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = true - default 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = true - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'world',
    'defaultMessage': 'hello world'
  }
});
"
`;
